Remove 1px gap for issue #21

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -18,3 +18,6 @@ ul.nav li.dropdown:hover ul.dropdown-menu{
     display: block;    
 }
 
+.dropdown-menu {
+  margin-top: 0px;
+}
